--- a/api/package.json
+++ b/api/package.json
@@ -6,6 +6,9 @@
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
-  "dependencies": {},
+  "dependencies": {
+    "axios": "^0.19.2",
+    "simple-oauth2": "^3.4.0"
+  },
   "devDependencies": {}
 }
