--- a/api/package.json
+++ b/api/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "func start",
+    "start": "func start –debug",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "redis": "^3.0.2",
     "simple-oauth2": "^3.4.0"
   },
   "devDependencies": {}
