--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,9 @@
   "proxy": "http://localhost:7071/",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "@material-ui/core": "^4.10.1",
+    "@material-ui/lab": "^4.0.0-alpha.55",
+    "@material-ui/styles": "^4.10.0",
     "axios": "^0.19.0",
     "bulma": "^0.8.1",
     "node-sass": "^4.14.1",
