--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "func start –debug",
+    "start": "func start",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
