--- a/api/package.json
+++ b/api/package.json
@@ -2,11 +2,12 @@
   "name": "functions",
   "version": "1.0.0",
   "description": "",
-   "scripts": {
+  "scripts": {
     "start": "func start",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/cosmos": "^3.7.0",
     "axios": "^0.19.2",
     "redis": "^3.0.2",
     "simple-oauth2": "^3.4.0"
